// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h1
  className="sc-AxjAm kNLUWN sinoui-typography sinoui-typography--h1"
  color="textPrimary"
  type="h1"
>
  H1
</h1>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-AxjAm kNLUWN sinoui-typography sinoui-typography--h1"
    color="textPrimary"
    type="h1"
  >
    H1
  </h2>,
  <h1
    className="sc-AxjAm hIcozJ sinoui-typography sinoui-typography--h1"
    color="textPrimary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-AxjAm bCtylw sinoui-typography sinoui-typography--h1"
    color="textPrimary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-AxjAm leiwdV sinoui-typography sinoui-typography--h1"
    color="success"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-AxjAm glccFR sinoui-typography sinoui-typography--h1 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h1"
  >
    H1
  </h1>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h1
    className="sc-AxjAm kNLUWN sinoui-typography sinoui-typography--h1"
    color="textPrimary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-AxjAm lceypS sinoui-typography sinoui-typography--h1"
    color="primary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-AxjAm hpaERZ sinoui-typography sinoui-typography--h1"
    color="secondary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-AxjAm kNLUWN sinoui-typography sinoui-typography--h1"
    color="textPrimary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-AxjAm dyVuxs sinoui-typography sinoui-typography--h1"
    color="textSecondary"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-AxjAm hWqQRY sinoui-typography sinoui-typography--h1"
    color="error"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-AxjAm ivPsXl sinoui-typography sinoui-typography--h1"
    color="warning"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-AxjAm leiwdV sinoui-typography sinoui-typography--h1"
    color="success"
    type="h1"
  >
    H1
  </h1>,
  <h1
    className="sc-AxjAm kUEsvJ sinoui-typography sinoui-typography--h1"
    color="info"
    type="h1"
  >
    H1
  </h1>,
]
`;
